--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Discover delicious, new recipes that use ingredients you already have." />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +23,7 @@
       Only files inside the `public` folder can be referenced from the HTML.
     -->
   <title>Insta-Chef</title>
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="img/insta-chef-logo.png">
 </head>
 
 <body>
