tabs for pantry categories

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
 
   <script>src = "../../db/index.js"</script>
   <script>src = "../../db/realtime.js"</script>
+  
+  <script>src = "../src/index.js"</script>
+  <script>src = "../src/Components/Pantry.js"</script>
 </body>
 
 </html>
