create new navbar

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     -->
   <title>Insta-Chef</title>
   <link rel="icon" type="image/png" href="img/insta-chef-logo.png">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+    integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -32,7 +34,7 @@
 
   <script>src = "../../db/index.js"</script>
   <script>src = "../../db/realtime.js"</script>
-  
+
   <script>src = "../src/index.js"</script>
   <script>src = "../src/Components/Pantry.js"</script>
 </body>
