--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Discover delicious, new recipes that use ingredients you already have." />
+  <meta name="description" content="Discover new recipes for your culinary desires, based on ingredients you have on hand!" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
